[package]
name = "async-task"
version = "0.1.0"
authors = ["duanjp8617 <duanjp8617@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.0"
async-task = "3.0.0"
surf = "1.0.3"
pin-utils = "0.1.0-alpha.4"
crossbeam = "0.7.3"
futures = "0.3.1"
lazy_static = "1.4.0"